# CNN-pipeline

./: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  config-sample.json  eval.py  helper.py  model.py  mypy.ini  predict.cpp  predict.py  train.py  trained-model-history.csv  trained-model-summary.txt  utils.py
cmake/: compiler-flags.cmake  git.cmake  proto.cmake  sanitizers.cmake
diagnostics/: .gitkeep
model.dat/: keras_metadata.pb  saved_model.pb
model.dat/variables/: variables.index
my.model/variables/: variables.index
src/: CMakeLists.txt  Makefile  debug.cpp  debug.py  eval.py  helper.py  model.py  predict.cpp  predict.py
src/cpp/: CMakeLists.txt  classify_video.cpp  debug.cpp  debug_tools.cpp  event_loops.cpp  event_loops.h  global_vars.cpp  global_vars.h  inference_service.cpp  model_utils.cpp  model_utils.h  percentile_tracker.h  predict.cpp  utils.cpp  utils.h
src/cpp/http_service/: AppComponent.hpp  CMakeLists.txt  ErrorHandler.cpp  ErrorHandler.hpp  app_component.hpp  oatpp_entry.cpp
src/cpp/http_service/controller/: SwaggerController.hpp
src/cpp/http_service/dto/: InternalStateDto.hpp  ModelInfoDto.hpp
src/cpp/rest/: App.cpp  App.h  AppComponent.hpp  CMakeLists.txt  ErrorHandler.hpp  SwaggerComponent.hpp  oatpp_entry.h
src/cpp/rest/controller/: StaticController.hpp  SwaggerController.hpp
src/cpp/rest/dto/: InternalStateDto.hpp  RespDto.hpp  SettingsDto.hpp
src/inference/: CMakeLists.txt  classify_images.cpp  classify_video.cpp  debug_tools.cpp  event_loops.cpp  event_loops.h  global_vars.cpp  global_vars.h  inference_service.cpp  model_utils.cpp  model_utils.h  percentile_tracker.h  playground.cpp  utils.cpp  utils.h
src/inference/http_service/: AppComponent.hpp  CMakeLists.txt  app_component.hpp  error_handler.cpp  error_handler.hpp  oatpp_entry.h  swagger_component.hpp
src/inference/http_service/controller/: SwaggerController.hpp
src/inference/http_service/dto/: InternalStateDto.hpp  ModelInfoDto.hpp  RespDto.hpp
src/inference/tools/: CMakeLists.txt  classify_images.cpp  classify_video.cpp  three_class_inference_consumer.cpp  zeromq_consumer.cpp  zeromq_test_consumer.cpp
src/modeling/: classify-images.py  debug_tools.py  eval.py  helper.py  model.py  model_definitions.py  model_driver.py  model_mobilenetv3.py  model_resnet.py  model_squeezenet.py  model_vgg.py  model_vggmm.py  model_vggnet.py  prepare-training-data.py  test.py  training-scheduler.py
src/modeling/utilities/: extract-frames-for-inference.sh  split-samples.py
src/proto/: inference_result.proto  snapshot.proto
src/py/: eval.py  helper.py  model.py  predict.py
src/py/utilities/: extract-frames-for-inference.sh  extract-frames.sh  prepare-frames-for-training.sh  resize-them-all.py  split-samples.py
src/python/: model.py  predict.py
src/swagger/: App.cpp  AppComponent.hpp  CMakeLists.txt
src/swagger/controller/: StaticController.hpp  UserController.hpp
src/utilities/: extract-frames-for-inference.sh  extract-frames.sh  prepare-frames-for-training.sh  resize-them-all.py  split-samples.py
trained-model/: keras_metadata.pb  saved_model.pb
trained-model/variables/: variables.index
